modify com, dis som api
